--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "prettier": "3.4.2",
-    "sharp": "^0.33.5",
     "tsup": "^8.3.6",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.21.0",
@@ -59,5 +58,8 @@
   "lint-staged": {
     "*.ts": "eslint --cache --fix",
     "*.--write": "prettier --write"
+  },
+  "dependencies": {
+    "sharp": "^0.33.5"
   }
 }
