--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   ],
   "scripts": {
     "build": "tsup src/index.ts --dts --format cjs,esm",
+    "clean": "git clean -fdX",
     "deploy": "npm run build && npm publish",
     "format": "prettier . --write",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "test": "vitest --run",
-    "prepare": "husky install"
+    "prepare": "husky",
+    "release": "pnpm run build && changeset publish"
   },
   "author": "",
   "license": "MIT",
@@ -38,10 +40,12 @@
   },
   "homepage": "https://wc-toolkit.com/cem-utilities/overview",
   "devDependencies": {
+    "@changesets/cli": "^2.27.12",
     "@eslint/js": "^9.19.0",
     "custom-elements-manifest": "2.1.0",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
+    "husky": "^9.1.7",
     "prettier": "3.4.2",
     "tsup": "^8.3.6",
     "typescript": "^5.7.3",
