--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "clean": "git clean -fdX",
     "deploy": "npm run build && npm publish",
     "format": "prettier . --write",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint 'src/**/*.ts'",
+    "lint:fix": "eslint 'src/**/*.ts' --fix",
     "test": "vitest --run",
     "prepare": "husky",
     "release": "pnpm run build && changeset publish"
