--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,13 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
-
+    
+      - name: Build
+        run: pnpm lint && pnpm build
+    
+      - name: Run tests
+        run: pnpm test
+    
       - name: Create Release Pull Request or Publish
         id: changesets
         uses: changesets/action@v1
