--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Run tests
         run: pnpm test
     
-      - name: Create Release Pull Request or Publish
+      - name: Create Release Pull Request and Publish
         id: changesets
         uses: changesets/action@v1
         with:
