--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "format": "prettier . --write",
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' --fix",
-    "test": "vitest --run",
+    "test": "vitest --run --passWithNoTests",
     "prepare": "husky",
     "release": "pnpm run build && changeset publish --access public"
   },
