--- a/package.json
+++ b/package.json
@@ -67,5 +67,9 @@
   "lint-staged": {
     "*.ts": "eslint --cache --fix",
     "*.--write": "prettier --write"
+  },
+  "publishConfig": {
+    "provenance": true,
+    "access": "public"
   }
 }
