add initial logic

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@wc-toolkit/jsdoc-tags",
-  "version": "1.0.2",
+  "name": "@wc-toolkit/type-parser",
+  "version": "0.0.0",
   "description": "A set of tools for retrieving and transforming data from the Custom Elements Manifest",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
@@ -35,16 +35,17 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wc-toolkit/jsdoc-tags.git"
+    "url": "git+https://github.com/wc-toolkit/type-parser.git"
   },
   "bugs": {
-    "url": "https://github.com/wc-toolkit/jsdoc-tags/issues"
+    "url": "https://github.com/wc-toolkit/type-parser/issues"
   },
-  "homepage": "https://wc-toolkit.com/documentation/jsdoc-tags",
+  "homepage": "https://wc-toolkit.com/documentation/type-parser",
   "devDependencies": {
     "@changesets/cli": "^2.27.12",
     "@custom-elements-manifest/analyzer": "^0.10.4",
     "@eslint/js": "^9.19.0",
+    "@types/node": "^22.13.2",
     "@wc-toolkit/cem-utilities": "^1.0.0",
     "comment-parser": "^1.4.1",
     "custom-elements-manifest": "2.1.0",
@@ -63,8 +64,8 @@
     "web-components",
     "components",
     "cem",
-    "jsdoc",
-    "@wc-toolkit/jsdoc-tags"
+    "typescript",
+    "@wc-toolkit/type-parser"
   ],
   "lint-staged": {
     "*.ts": "eslint --cache --fix",
