--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "/dist"
   ],
   "scripts": {
-    "analyze": "npm run build && cem analyze --globs demo/src/**/*.js --outdir demo",
+    "analyze": "npm run build && cem analyze",
     "changeset": "changeset add",
     "build": "tsup src/index.ts --dts --format cjs,esm",
     "clean": "git clean -fdX",
@@ -27,7 +27,7 @@
     "format": "prettier . --write",
     "lint": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' --fix",
-    "test": "vitest --run --passWithNoTests",
+    "test": "npm run analyze && vitest --run --passWithNoTests",
     "prepare": "husky",
     "release": "pnpm run build && changeset publish --access=public"
   },
