--- a/package.json
+++ b/package.json
@@ -55,8 +55,7 @@
     "prettier": "3.4.2",
     "tsup": "^8.3.6",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.21.0",
-    "vitest": "^3.0.5"
+    "typescript-eslint": "^8.21.0"
   },
   "keywords": [
     "custom-elements",
