--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "prettier": "3.4.2",
     "tsup": "^8.3.6",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.21.0"
+    "typescript-eslint": "^8.21.0",
+    "vitest": "^3.0.4"
   },
   "keywords": [
     "custom-elements",
